--- a/gpu-price-tracker/app/landing/landing.scss
+++ b/gpu-price-tracker/app/landing/landing.scss
@@ -9,14 +9,16 @@ section.main {
     width: 100%;
     height: 100%;
     filter: contrast(120%) brightness(100%);
-    background: linear-gradient(191deg, rgba(28, 28, 30, 1), rgba(0, 0, 0, 0)),
+    background: 
+    linear-gradient(191deg, rgba(28, 28, 30, 1), rgba(0, 0, 0, 0) ),
       linear-gradient(349deg, rgba(138, 6, 6, 1), rgba(0, 0, 0, 0)),
       url("../../images/batthern.png");
+      mask-image: linear-gradient(to left, black, transparent 80%);
   }
 
   .font-kinetika {
     font-family: "Kinetika";
-    font-size: 120px;
+    // font-size: 120px;
   }
 }
 
@@ -24,7 +26,12 @@ html.has-smooth-scroll,
 html.has-smooth-scroll body {
   overflow: hidden;
 }
-
+h3{
+  font-size: 2rem;
+  font-weight: 700;
+  line-height: 2rem;
+  margin-bottom: 2rem;
+}
 body {
   font-family: "Signika Negative", sans-serif;
   color: #181a1b;
